# server-metrics

./: .gitignore  README.md  docker-compose.yml  package-lock.json
agent/: .env  .gitignore  Dockerfile  README.MD  agent.py  requirements.txt
backend/: .env  .gitignore  Dockerfile  README.MD  alembic.ini  cloudbuild.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0ed4055d798d_add_password_and_provider_fields_to_.py  11d25f8075f9_add_incidents_table.py  1834a7d271a8_add_type_column_alert_rules.py  19e7aa25f892_add_metric_baselines_table.py  2c09a02c7e43_add_webhook_url_to_servers_table.py  3d1d39c42c90_add_relationship_between_servers_and_.py  426678c46c3d_merge_divergent_branches.py  662c933dc5bc_add_table_traces_and_spans.py  744c9a12f001_add_process_metrics_to_metric_table.py  (+8 more)
backend/backend/: __init__.py  crud.py  database.py  main.py  models.py  reset_db.py  schemas.py  security.py  websocket_manager.py
dashboard/: DockerFile  cloudbuild.yaml  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.css  App.tsx  main.tsx
server-metrics-py-apm/server-metrics-py-apm/: __init__.py  instrument.py
server-metrics-py-apm/server_metrics_apm.egg-info/: PKG-INFO  SOURCES.txt
server_metrics_apm/: pyproject.toml
server_metrics_apm/examples/: fastapi_examples.py
server_metrics_apm/server_metrics_apm/: __init__.py  client.py  context.py  instrument.py  middleware.py  utils.py
server_metrics_apm/server_metrics_apm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+30 files in other folders)
